# OpenGL_Study

./: .gitignore  CMakeLists.txt  README.md
assert/material/: material
assert/shader/: base.fs  base.vs  base_dissolution.fs  base_dissolution.vs  base_wave.fs  ground.fs  ground.vs  light.fs  light_caster.fs  light_cubemap.fs  light_cubemap.vs  light_map.fs  light_map.vs  light_object.fs  light_object.vs  model.fs  model.vs  multiple_light.fs  skybox.fs  skybox.vs
assert/shader/light/: Phone.fs  blinPhone.fs  common.fs  diff_wrap.fs  diff_wrap1.fs  half_lambert.fs
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
includes/glew/include/GL/: wglew.h
includes/glm/gtx/: constants.inl
includes/imgui/: imgui.h
includes/imgui/backends/: imgui_impl_win32.cpp
lib/: libgltools.dylib
src/: Camera.cpp  Camera.h  Ground.cpp  Ground.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Render.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  State.cpp  State.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  Window.cpp  Window.h  image.h  main.cpp
src/light/: DirLight.cpp  DirLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/loader/: BinaryFileReader.cpp  BinaryFileReader.h
src/reflect/: Layer_Fb.fbs
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestCubeMap.cpp  TestCubeMap.h  TestDrawBox.cpp  TestDrawBox.h  TestLight.cpp  TestLight.h  TestLightCaster.cpp  TestLightCaster.h  TestLightMap.cpp  TestLightMap.h  TestLightSpot.cpp  TestLightSpot.h  TestLoadModel.cpp  TestLoadModel.h  TestShaderDissolution.cpp  TestShaderDissolution.h
